# decomp-emerald-extractor

./: .gitmodules  Cargo.toml
pokeemerald-binds/: .gitignore  Cargo.toml  build.rs  compile_flags.txt  wrapper.c  wrapper.h
pokeemerald-binds/jsonproc/: .gitignore  Cargo.toml
pokeemerald-binds/source/data/: wild_encounters.h
pokeemerald-binds/src/: .gitignore  _bindings.rs  lib.rs
pokeemerald-binds/stubs/: anims.h  battle_dynamax.h  item_effects.h
src/: areas.json  formes.json  json.rs  main.rs  overrides.json  rom.rs
