[package]
name = "decomp-emerald-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
indexmap = {version = "2.2.6", features = ["std", "serde"]}
pokeemerald-binds = {path = "./pokeemerald-binds"}
serde = {version = "1.0.203", features = ["std", "serde_derive"]}
serde_json = "1.0.117"
serde_with = "3.8.1"

[workspace]
members = ["pokeemerald-binds"]
